second commit 游戏开始逻辑修改

--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #ced6e0
+  background-color: #3742fa;
+  background-image: url(https://flatuicolors.com/static/img/stars-opacity.0979c1.svg);
 }
 body, html, h1 {
   margin: 0;
